<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.altro.donazioni.DonazioniActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewDonazioni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inserisci_l_importo_con_cui_ci_vuoi_supportare"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextDonazioni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/angoli_arrotondati"
            android:ems="10"
            android:hint="@string/importo"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textColorHint="#9A9A9A" />

        <Button
            android:id="@+id/buttonDona"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@android:color/holo_green_light"
            android:textColor="@color/white"
            android:text="@string/effettua_donazione" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>