<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.altro.chi_siamo.soci.SociActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.altro.chi_siamo.soci.SociActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_image_profilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="4dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewSocio"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/peppe" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nome_socio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_image_profilo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_socio">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/linkedin_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/linkedin"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/image_linkedin"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/linkedin" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/git_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/github"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/image_git"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/git" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/outlook_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/outlook"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/image_outlook"
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/outlook" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>